<resources>
    <string name="app_name">Groupizer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="nice_to_see_you_again">Nice to see you again</string>
    <string name="welcome">Welcome!</string>
    <string name="you_are_not_a_member">You are not a member?</string>
    <string name="register">Register</string>
    <string name="hello_there">Hello There!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="welcome_aboard">Welcome Aboard!</string>
    <string name="display_name">Display Name</string>
    <string name="already_a_member">Already a member?</string>
    <string name="next">Next</string>
    <string name="choose_your_preferences">Choose Your Preferences</string>
    <string name="interests_sub_header">Interests are used to select the groups you prefer</string>
    <string name="finish">Finish</string>
    <string name="current_user">current user</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="user_token">user token</string>
    <string name="other">Other</string>
    <string name="view">View</string>
    <string name="user_id">user id</string>
    <string name="members">Members</string>
    <string name="me">Me</string>
    <string name="chat">Chat</string>
    <string name="join_a_group_or_create_yours">Join a group or create yours</string>
    <string name="administrator">Administrator</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search for a group</string>
    <string name="sign_out">Sign out</string>
    <string name="join">Join</string>
    <string name="group_id">group id</string>
    <string name="admin">Admin</string>
    <string name="requests">Requests</string>
    <string name="message">Enter Message</string>
    <string name="you_ve_no_pending_requests">You\'ve no pending requests</string>
    <string name="promote">Promote</string>
    <string name="_0_new_requests">0 New Requests</string>
    <string name="you_are_not_authorized">You are not authorized</string>
    <string name="rejected">Rejected</string>
    <string name="pending">Pending</string>

    <string-array name="roles">
        <item>Admin</item>
        <item>Member</item>
    </string-array>
</resources>