<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/group_home"
        android:title="@string/home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:orderInCategory="2"
       />
    <item android:id="@+id/group_chat"
        android:title="@string/chat"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_message_24"

        />
    <item android:id="@+id/group_members"
        android:title="@string/members"
        android:orderInCategory="3"
        android:icon="@drawable/ic_baseline_group_24"
        android:enabled="true"/>
    <item android:id="@+id/group_requests"
        android:title="@string/requests"
        android:icon="@drawable/ic_baseline_person_add_24"
        android:enabled="true"/>
</menu>