<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="homeFragment"
            type="com.example.groupizer.ui.home.HomeFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".ui.home.HomeFragment">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/header_margin_start"
            android:layout_marginTop="@dimen/header_margin_top"
            android:fontFamily="@font/sego_bold"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/header_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.7"
            android:text="@string/nice_to_see_you_again"
            android:textColor="@color/white"
            android:textSize="@dimen/sub_header_text_size"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:fontFamily="@font/sego_light"
            android:text="@string/you_are_not_a_member"
            android:textColor="@color/black"
            android:textSize="@dimen/sub_header_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toStartOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.53" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_loginBtn"
            style="@style/primary_button"
            android:layout_marginTop="@dimen/home_login_button_margin_top"
            android:onClick="@{() -> homeFragment.goToLogin()}"
            android:text="@string/login"
            app:cornerRadius="@dimen/button_radius"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/home_registerBtn"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sego_bold"
            android:onClick="@{() -> homeFragment.goToRegister()}"
            android:padding="0dp"
            android:text="@string/register"
            android:textColor="@color/bright_blue"
            android:textSize="@dimen/sub_header_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>