<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="registerFragment"
            type="com.example.groupizer.ui.auth.register.RegisterFragment" />
        <variable
            name="viewModel"
            type="com.example.groupizer.ui.auth.register.viewmodel.RegisterViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.register.RegisterFragment">
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/login_elements_margin_start"
            android:layout_marginTop="@dimen/header_margin_top"
            android:fontFamily="@font/sego_bold"
            android:text="@string/welcome_aboard"
            android:textColor="@color/bright_blue"
            android:textSize="@dimen/header_2_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="@dimen/edittext_margin_end"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusBottomEnd="@dimen/edittext_radius"
            app:boxCornerRadiusBottomStart="@dimen/edittext_radius"
            app:boxCornerRadiusTopEnd="@dimen/edittext_radius"
            app:boxCornerRadiusTopStart="@dimen/edittext_radius"
            app:boxBackgroundColor="#E8F2F4"
            app:boxStrokeColor="@color/bright_blue"
            app:hintTextColor="@color/bright_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_name_field"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:hint="@string/display_name"
                android:maxLines="1"
                android:maxLength="60"
                android:textColor="@color/bright_blue"
                android:fontFamily="@font/sego_semibold"
                tools:text="Muhammed Salman"
                android:textSize="@dimen/edittext_text_size"

                android:inputType="textPersonName"
                android:layout_height="@dimen/edittext_height"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edittext_margin_top"
            android:layout_marginEnd="@dimen/edittext_margin_end"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusBottomEnd="@dimen/edittext_radius"
            app:boxCornerRadiusBottomStart="@dimen/edittext_radius"
            app:boxCornerRadiusTopEnd="@dimen/edittext_radius"
            app:boxCornerRadiusTopStart="@dimen/edittext_radius"
            app:boxBackgroundColor="#E8F2F4"
            app:boxStrokeColor="@color/bright_blue"
            app:hintTextColor="@color/bright_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/name_layout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_email_field"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:hint="@string/email_address"
                android:maxLines="1"
                android:maxLength="60"
                android:textColor="@color/bright_blue"
                android:fontFamily="@font/sego_semibold"
                tools:text="mahmadslman@gmail.com"
                android:textSize="@dimen/edittext_text_size"
                android:inputType="textEmailAddress"
                android:layout_height="@dimen/edittext_height"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edittext_margin_top"
            android:layout_marginEnd="@dimen/edittext_margin_end"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusBottomEnd="@dimen/edittext_radius"
            app:boxCornerRadiusBottomStart="@dimen/edittext_radius"
            app:boxCornerRadiusTopEnd="@dimen/edittext_radius"
            app:boxCornerRadiusTopStart="@dimen/edittext_radius"
            app:boxBackgroundColor="#E8F2F4"
            app:boxStrokeColor="@color/bright_blue"
            app:hintTextColor="@color/bright_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/email_layout">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password_field"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:hint="@string/password"
                android:maxLines="1"
                android:maxLength="30"
                android:textColor="@color/bright_blue"
                android:fontFamily="@font/sego_semibold"
                tools:text="mahmadslman@gmail.com"
                android:textSize="@dimen/edittext_text_size"
                android:inputType="textPassword"
                android:layout_height="@dimen/edittext_height"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_nextBtn"
            style="@style/primary_button"
            android:layout_marginTop="@dimen/login_button_margin_top"
            android:text="@string/next"
            app:icon="@drawable/ic_arrow_forward"
            app:iconGravity="end"
            android:onClick="@{() -> registerFragment.goToInterests()}"
            android:textAlignment="center"
            app:cornerRadius="@dimen/button_radius"
            app:layout_constraintEnd_toEndOf="@+id/password_layout"
            app:layout_constraintTop_toBottomOf="@+id/password_layout" />
        <ProgressBar
            android:id="@+id/registering_progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/pink"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/register_nextBtn"
            app:layout_constraintEnd_toEndOf="@+id/register_nextBtn"
            app:layout_constraintStart_toStartOf="@+id/register_nextBtn"
            app:layout_constraintTop_toTopOf="@+id/register_nextBtn" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="1"
            android:fontFamily="@font/sego_light"
            android:text="@string/already_a_member"
            android:textColor="@color/black"
            android:textSize="@dimen/sub_header_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/imageView2"
            app:layout_constraintHorizontal_bias="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_loginBtn"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sego_bold"
            android:padding="7dp"
            android:gravity="start|center"
            android:text="@string/login"
            android:onClick="@{() -> registerFragment.goToLogin()}"
            android:textColor="@color/bright_blue"
            android:textSize="@dimen/sub_header_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>