<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".ui.dashboard.DashboardActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:elevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/bright_blue"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:elevation="5dp"
                    android:fontFamily="@font/sego_bold_italic"
                    android:text="@string/app_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintBottom_toBottomOf="@+id/dashboard_toolbar"
                    app:layout_constraintEnd_toEndOf="@+id/dashboard_toolbar"
                    app:layout_constraintStart_toStartOf="@+id/dashboard_toolbar"
                    app:layout_constraintTop_toTopOf="@+id/dashboard_toolbar" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/dashboard_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    app:layout_collapseMode="parallax"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:menu="@menu/toolbar"
                    app:navigationIcon="@drawable/ic_baseline_hourglass_top_24" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs_layout"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:tabIndicatorGravity="top"
                app:tabIndicatorHeight="1.5dp"
                app:tabIndicatorFullWidth="false"
                android:background="@color/white"
                android:layout_gravity="bottom"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:tabIndicatorColor="@color/pink">

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_baseline_home_24"
                    android:text="@string/home" />

                <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:icon="@drawable/ic_baseline_explore_24"
                    android:text="@string/explore" />
            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/tabs_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>





    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>